feat: scraping wod names, types and details from Heroes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ authors = ["Luis D'Lima <delimce@gmail.com>"]
 [dependencies]
 reqwest = {version = "0.11", features = ["blocking"]}
 scraper = "0.13.0"
+itertools = "0.10.3"
