--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ itertools = "0.10.3"
 regex = "1.6.0"
 diesel = { version = "2.0.0-rc.0", features = ["mysql","r2d2"]  }
 dotenvy = "0.15"
+chrono = "0.4"
